crates/courier-ftp/src/components/status_bar/snapshots/courier_ftp__components__status_bar__snapshot_tests__server_info_ftps_80x24.snap
---
source: crates/courier-ftp/src/components/status_bar/snapshot_tests.rs
expression: "h.render(80, 24)"
---
 Quickconnect (not available yet)                                               
 1┌ Server information · Tab 1 ──────────────────────────────────────────────┐  
┌ │ Protocol        FTP over TLS (explicit, required)                        │─┐
│ │ Server          ftp.example.com:21 (203.0.113.5)                         │ │
│ │ Software        220 (vsFTPd 3.0.5)                                       │ │
└─│ System          UNIX Type: L8                                            │─┘
┏▶│ Features        MLSD MLST SIZE MDTM REST STREAM UTF8 EPSV                │─┐
┃(│                                                                          │ │
┃ │ TLS version     TLS 1.3                                                  │ │
┃ │ Cipher suite    TLS_AES_256_GCM_SHA384                                   │ │
┃ │ Data channel    TLS (PROT P)                                             │ │
┃ │                                                                          │ │
┃ │ Subject         CN=ftp.example.com                                       │ │
┃ │ Issuer          CN=R11, O=Let's Encrypt, C=US                            │ │
┃ │ Valid           2026-08-01 to 2026-10-30 (21 days left)                  │ │
┃ │ Host name       matches                                                  │ │
┃ │ SHA-256         4F:56:5D:64:6B:72:79:80:87:8E:95:9C:A3:AA:B1:B8:BF:C6:CD │ │
┃ │                 :D4:DB:E2:E9:F0:F7:FE:05:0C:13:1A:21:28                  │ │
┗━│ Trust           system trust roots                                       │─┘
┌ │                                                                          │─┐
│(│ [ Details ]  [ Close ]                                                   │ │
│ └──────────────────────────────────────────────────────────────────────────┘ │
└──────────────────────────────────────────────────────────────────────────────┘
 – not connected │ Type: Auto │ ⇅ off                                  F10 quit
