crates/courier-ftp/src/components/status_bar/snapshots/courier_ftp__components__status_bar__snapshot_tests__server_info_sftp_160x48.snap
---
source: crates/courier-ftp/src/components/status_bar/snapshot_tests.rs
expression: "h.render(160, 48)"
---
 Quickconnect (not available yet)                                                                                                                               
 1 Local                                                                                                                                                        
┌ Message log · Tab 1 ─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┏▶Local ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓┌ Remote ──────────────────────────────────────────────────────────────────────┐
┃(not available yet)                                                           ┃│(not available yet)                                                           │
┃                                                                              ┃│                                                                              │
┃                                                                              ┃│                                                                              │
┃                                                                              ┃│                                                                              │
┃                                                                              ┃│                                                                              │
┃                                                                              ┃│                                                                              │
┃                             ┌ Server information · Tab 2 · web01 ──────────────────────────────────────────────────────────────┐                             │
┃                             │ Protocol        SFTP (SSH-2)                                                                     │                             │
┃                             │ Server          web01.example.com:22 (198.51.100.7)                                              │                             │
┃                             │ Software        SSH-2.0-OpenSSH_9.6                                                              │                             │
┃                             │                                                                                                  │                             │
┃                             │ Host key        ssh-ed25519 256                                                                  │                             │
┃                             │ Fingerprint     SHA256:p2QAMXNIC1TJYWeIOttrVc98/R1BUFWu3/LiyKgUfQM                               │                             │
┃                             │ Key exchange    curve25519-sha256                                                                │                             │
┃                             │ Cipher          chacha20-poly1305@openssh.com                                                    │                             │
┃                             │ MAC             implicit (AEAD cipher)                                                           │                             │
┃                             │ Compression     none                                                                             │                             │
┃                             │                                                                                                  │                             │
┃                             │ [ Close ]                                                                                        │                             │
┃                             └──────────────────────────────────────────────────────────────────────────────────────────────────┘                             │
┃                                                                              ┃│                                                                              │
┃                                                                              ┃│                                                                              │
┃                                                                              ┃│                                                                              │
┃                                                                              ┃│                                                                              │
┃                                                                              ┃│                                                                              │
┃                                                                              ┃│                                                                              │
┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛└──────────────────────────────────────────────────────────────────────────────┘
┌ Queue ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│(not available yet)                                                                                                                                           │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
 – not connected │ Type: Auto │ ⇅ off                                                                                                                  F10 quit
