crates/courier-ftp/src/components/status_bar/snapshots/courier_ftp__components__status_bar__snapshot_tests__snap_status_bar_state_a_160x48.snap
---
source: crates/courier-ftp/src/components/status_bar/snapshot_tests.rs
expression: "h.render(w, hh)"
---
 Quickconnect (not available yet)                                                                                                                               
 1 Local                                                                                                                                                        
┌ Message log · Tab 1 ─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┏▶Local ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓┌ Remote ──────────────────────────────────────────────────────────────────────┐
┃(not available yet)                                                           ┃│(not available yet)                                                           │
┃                                                                              ┃│                                                                              │
┃                                                                              ┃│                                                                              │
┃                                                                              ┃│                                                                              │
┃                                                                              ┃│                                                                              │
┃                                                                              ┃│                                                                              │
┃                                                                              ┃│                                                                              │
┃                                                                              ┃│                                                                              │
┃                                                                              ┃│                                                                              │
┃                                                                              ┃│                                                                              │
┃                                                                              ┃│                                                                              │
┃                                                                              ┃│                                                                              │
┃                                                                              ┃│                                                                              │
┃                                                                              ┃│                                                                              │
┃                                                                              ┃│                                                                              │
┃                                                                              ┃│                                                                              │
┃                                                                              ┃│                                                                              │
┃                                                                              ┃│                                                                              │
┃                                                                              ┃│                                                                              │
┃                                                                              ┃│                                                                              │
┃                                                                              ┃│                                                                              │
┃                                                                              ┃│                                                                              │
┃                                                                              ┃│                                                                              │
┃                                                                              ┃│                                                                              │
┃                                                                              ┃│                                                                              │
┃                                                                              ┃│                                                                              │
┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛└──────────────────────────────────────────────────────────────────────────────┘
┌ Queue ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│(not available yet)                                                                                                                                           │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
 🔒  TLS 1.3 │ Type: Auto │ ⇅ ↓500 KiB/s ↑100 KiB/s │ ⚑ filters │ ⇄ sync ≠ compare │ Queue: 12 files, 30.2 MiB, ↓1.20 MiB/s, ~00:00:25          F1 help  F5 copy
