crates/courier-ftp/src/components/status_bar/snapshots/courier_ftp__components__status_bar__snapshot_tests__status_bar_state_a_ascii_160.snap
---
source: crates/courier-ftp/src/components/status_bar/snapshot_tests.rs
expression: "bar(&state_a(&h), w, &sym, &t)"
---
 [TLS 1.3] | Type: Auto | lim D:500K U:100K | [filters] | <> sync != compare | Queue: 12 files, 30.2 MiB, v1.20 MiB/s, ~00:00:25      F1 help  F5 copy  F6 move 
--- styles ---
  0   0+1   Style::new().fg(Color::Reset).bg(Color::Indexed(236)).underline_color(Color::Reset)
  0   1+9   Style::new().fg(Color::Indexed(2)).bg(Color::Indexed(236)).underline_color(Color::Reset)
  0  10+16  Style::new().fg(Color::Reset).bg(Color::Indexed(236)).underline_color(Color::Reset)
  0  26+17  Style::new().fg(Color::Indexed(3)).bg(Color::Indexed(236)).underline_color(Color::Reset)
  0  43+3   Style::new().fg(Color::Reset).bg(Color::Indexed(236)).underline_color(Color::Reset)
  0  46+9   Style::new().fg(Color::Indexed(3)).bg(Color::Indexed(236)).underline_color(Color::Reset)
  0  55+3   Style::new().fg(Color::Reset).bg(Color::Indexed(236)).underline_color(Color::Reset)
  0  58+18  Style::new().fg(Color::Indexed(3)).bg(Color::Indexed(236)).underline_color(Color::Reset)
  0  76+58  Style::new().fg(Color::Reset).bg(Color::Indexed(236)).underline_color(Color::Reset)
  0 134+2   Style::new().fg(Color::Reset).bg(Color::Indexed(236)).underline_color(Color::Reset).bold()
  0 136+5   Style::new().fg(Color::Reset).bg(Color::Indexed(236)).underline_color(Color::Reset).dim()
  0 141+2   Style::new().fg(Color::Reset).bg(Color::Indexed(236)).underline_color(Color::Reset)
  0 143+2   Style::new().fg(Color::Reset).bg(Color::Indexed(236)).underline_color(Color::Reset).bold()
  0 145+5   Style::new().fg(Color::Reset).bg(Color::Indexed(236)).underline_color(Color::Reset).dim()
  0 150+2   Style::new().fg(Color::Reset).bg(Color::Indexed(236)).underline_color(Color::Reset)
  0 152+2   Style::new().fg(Color::Reset).bg(Color::Indexed(236)).underline_color(Color::Reset).bold()
  0 154+5   Style::new().fg(Color::Reset).bg(Color::Indexed(236)).underline_color(Color::Reset).dim()
  0 159+1   Style::new().fg(Color::Reset).bg(Color::Indexed(236)).underline_color(Color::Reset)
